# TheTribes

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  ResourceFlow.md  cultures_like.tex
code/: types.hpp
code/buildings/: Readme.md
code/include/tribes/: types.hpp
code/include/tribes/combat/: attack.hpp  harm.hpp
code/include/tribes/goods/: good.hpp
code/include/tribes/inhabitants/: harm.hpp  inhabitant.hpp  species.hpp
code/map/: Readme.md  chunk.hpp  chunk_container.hpp  fluids.hpp  layer.hpp  terrain.hpp
code/src/: CMakeLists.txt  main.cpp
code/src/combat/: CMakeLists.txt  harm.cpp
code/src/goods/: CMakeLists.txt  good.cpp
code/src/inhabitants/: CMakeLists.txt  harm.cpp
doc/: ResourceFlow.md  build.sh  cultures_like.tex  goods_glo.tex  tribes_glo.tex
doc/chapters/: conflict.tex  economy.tex  glossary.tex  goods.tex  tribes.tex  world.tex
doc/chapters/goods/: armory.tex  building_materials.tex  drink.tex  equipment.tex  food.tex  medicine.tex  merchandise.tex  raw_inputs.tex  tools.tex
doc/chapters/tribes/: aztecs.tex  comparison.tex  egyptians.tex  japanese.tex  nomads.tex  romans.tex  vikings.tex
doc/chapters/tribes/vikings/: economy.tex  religion.tex  society.tex
doc/chapters/world/: biomes.tex  inhabitants.tex  minerals.tex  plants.tex
doc/glossaries/: biomes_glo.tex  creatures_glo.tex  goods_glo.tex  include_glossaries.tex  needs_glo.tex  plants_glo.tex  tribes_glo.tex
